#
# This is a CMake makefile.  You can find the cmake utility and
# information about it at http://www.cmake.org
#

cmake_minimum_required(VERSION 2.6)

# create a variable called target_name and set it to the string "htmlify"
set (target_name htmlify)

PROJECT(${target_name})

# add all the cpp files we want to compile to this list.  This tells
# cmake that they are part of our target (which is the executable named htmlify)
ADD_EXECUTABLE(${target_name} 
   htmlify.cpp
   to_xml.cpp
   )

# Tell cmake to link our target executable to dlib.
include(../../dlib/cmake)
TARGET_LINK_LIBRARIES(${target_name} dlib )



INSTALL(TARGETS ${target_name}
	RUNTIME DESTINATION bin
	)


